In this version I created a form in index.html that redirects the data intered into the greet template. This path is provided in the action, the method get gets the data when the button is submitted. In app.py I create the new route that will route the form to the new template. I return the template path, and the second argument I set the name to the name that is returned from the request. If name isn't returned then there is a default

--- a/templates/greet.html
+++ b/templates/greet.html
@@ -7,9 +7,6 @@
 </head>
 <body>
     <!-- The curely brackets are coming from Jinja -->
-    <form action="/greet" method="get">
-        <input autocomplete="off" placeholder="Name" autofocus name="name" type="text">
-        <button type="submit">Greet</button>
-    </form>
+    <h1>Hello, {{ name }}</h1>
 </body>
 </html>
