In this version I used layout.html to be the file that starts the application and allows every other file to extend from it. I use block body and endblock to us to say, 'plug the contents of an entire file here'. What is 'plugged' is the the contents in other files. This starts by using extends filename and then incorpertating the block body and endblock tags. Same thing happes for the greet.html file.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
-</head>
-<body>
-    <!-- The curely brackets are coming from Jinja -->
+<!-- This syntax just says please extend whatever layout.html looks like -->
+{% extends "layout.html" %}
+
+<!-- In Jinja we are saying "Hey Python here comes the body of this page" -->
+{% block body %}
+
     <form action="/greet" method="get">
         <input autocomplete="off" placeholder="Name" autofocus name="name" type="text">
         <button type="submit">Greet</button>
     </form>
-</body>
-</html>
+
+<!-- Here we say "Hey Python that's it for the body of this page" -->
+{% endblock %}
