In this version I changed the form method from a GET request to a POST request in order to hide the values of the name in the URL, This caused the application to break. To fix this back in the app.py I originally add POST to the methods array. However I can also optionally combine both the GET AND POST request in the index function. Since GET is default, I can return the index page (This would happen upon refresh of page) and when we submit the form we send a POST request. Note that in this case to send the name over to the greet.html template we have to use request.form instead of request.args since args only works with the GET request.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
 <!-- In Jinja we are saying "Hey Python here comes the body of this page" -->
 {% block body %}
 
-    <form action="/greet" method="get">
+    <!-- GET request being the default isn't always the best option to use since we can see what is being set in the path of the url
+         Instead using POST will help with that (Note that only doing this will result in a 405 error) 
+         POST hides the data being sent through the request from the URL-->
+    <form action="/" method="post">
         <input autocomplete="off" placeholder="Name" autofocus name="name" type="text">
         <button type="submit">Greet</button>
     </form>
